maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:4: error: not found: value nextInt
    i=nextInt(3)
      ^